--- a/.github/workflows/KMMBridge-publish.yml
+++ b/.github/workflows/KMMBridge-publish.yml
@@ -1,9 +1,9 @@
 name: KMM Bridge/iOS Publish
 on:
   workflow_dispatch:
-#  push:
-#    branches:
-#      - "main"
+  push:
+    branches:
+      - "main"
 jobs:
   call-kmmbridge-publish:
     permissions:
